--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Cache &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>建站Demo</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -107,7 +107,7 @@
 			<div class="container">
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-8 col-md-offset-2 text-center ts-intro">
-						<h1>Keep it simple</h1>
+						<h1>文雯的Demo</h1>
 						<p class="fh5co-lead">Template handcrafted by <a href="#/" target="_blank">Freehtml5</a> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores explicabo quibusdam quae saepe non quasi quaerat adipisci eum dignissimos similique!</p>
 					</div>
 				</div>
