--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="">
     
     
-    <link rel="preload" href="myBlogs/assets/css/4.styles.8d065afe.css" as="style"><link rel="preload" href="myBlogs/assets/js/app.acd9b419.js" as="script"><link rel="prefetch" href="myBlogs/assets/js/0.ee9a2c21.js"><link rel="prefetch" href="myBlogs/assets/js/1.b2bed6a4.js"><link rel="prefetch" href="myBlogs/assets/js/2.76281d27.js"><link rel="prefetch" href="myBlogs/assets/js/3.d458bdb8.js">
-    <link rel="stylesheet" href="myBlogs/assets/css/4.styles.8d065afe.css">
+    <link rel="preload" href="/myBlogs/assets/css/4.styles.bd0aea69.css" as="style"><link rel="preload" href="/myBlogs/assets/js/app.f449d025.js" as="script"><link rel="prefetch" href="/myBlogs/assets/js/0.ee9a2c21.js"><link rel="prefetch" href="/myBlogs/assets/js/1.b2bed6a4.js"><link rel="prefetch" href="/myBlogs/assets/js/2.76281d27.js"><link rel="prefetch" href="/myBlogs/assets/js/3.d458bdb8.js">
+    <link rel="stylesheet" href="/myBlogs/assets/css/4.styles.bd0aea69.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1><blockquote>That's a Four-Oh-Four.</blockquote></div></div></div>
-    <script src="myBlogs/assets/js/app.acd9b419.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1><blockquote>How did we get here?</blockquote></div></div></div>
+    <script src="/myBlogs/assets/js/app.f449d025.js" defer></script>
   </body>
 </html>
